--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup-plugin-buble": "0.19.8",
     "rollup-plugin-commonjs": "10.0.1",
     "rollup-plugin-filesize": "6.1.1",
+    "rollup-plugin-iife": "^0.3.0",
     "rollup-plugin-modify": "3.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-progress": "1.1.1",
@@ -39,5 +40,6 @@
     "rollup-plugin-uglify": "6.0.2",
     "source-map": "0.6.1",
     "wright": "2.0.0-rc1"
-  }
+  },
+  "dependencies": {}
 }
